fixes xp bug, returns to home page on error, removes guava dependency and upgrades other dependencies, some refactorings