@@ -1,6 +1,5 @@
 package de.toomuchcoffee.hitdice.db;
 
-import com.google.common.collect.ImmutableMap;
 import de.toomuchcoffee.hitdice.config.JpaConfig;
 import io.zonky.test.db.AutoConfigureEmbeddedDatabase;
 import org.junit.jupiter.api.Test;
@@ -10,8 +9,8 @@ import org.springframework.boot.test.autoconfigure.orm.jpa.TestEntityManager;
 import org.springframework.context.annotation.Import;
 
 import java.util.List;
+import java.util.Map;
 
-import static com.google.common.collect.Lists.newArrayList;
 import static de.toomuchcoffee.hitdice.domain.Dice.D6;
 import static de.toomuchcoffee.hitdice.domain.Dice.n;
 import static de.toomuchcoffee.hitdice.domain.event.factory.ArmorFactory.LEATHER;
@@ -36,25 +35,25 @@ class HeroRepositoryTest {
         hero.setName("foo");
         Hero save = heroRepository.save(hero);
 
-        List<Item> items = newArrayList(
+        List<Item> items = List.of(
                 ItemTestData.createItem(
                         SHORTSWORD.getDisplayName(),
                         SHORTSWORD.ordinal(),
                         SHORTSWORD.isMetallic(),
                         ItemType.WEAPON,
-                        ImmutableMap.of("damage", D6.serialize())
+                        Map.of("damage", D6.serialize())
                 ),
                 ItemTestData.createItem(
                         LEATHER.getDisplayName(),
                         LEATHER.ordinal(),
                         LEATHER.isMetallic(),
                         ItemType.ARMOR,
-                        ImmutableMap.of("protection", LEATHER.getProtection())),
+                        Map.of("protection", LEATHER.getProtection())),
                 ItemTestData.createItem("health potion",
                         HEALTH.ordinal(),
                         false,
                         ItemType.POTION,
-                        ImmutableMap.of("potency", n(2).D(4).serialize()))
+                        Map.of("potency", n(2).D(4).serialize()))
         );
         items.forEach(i -> i.setHero(hero));
         hero.setItems(items);
